protocols/tests/adders/adder_d1/wait_and_add_incorrect_implicit.out
error: Thread 0 attempted conflicting assignment to 'a': current=4, new=1
   ┌─ adders/adder_d1/add_d1.prot:70:3
   │
70 │   DUT.a := a;
   │   ^^^^^^^^^^^ Thread 0 attempted conflicting assignment to 'a': current=4, new=1

